# Dorothy

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  dorothy-manifest.rc  dorothy.exe.manifest
db/: log.ini
src/: main.rs
src/gui/: gui.rs  mod.rs
src/modules/: csv.rs  database.rs  mod.rs
src/modules/csv/: mod.rs
src/modules/database/: mod.rs
src/modules/utility/: mod.rs
