[package]
name = "dorothy"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"
rust-ini = "0.18"

[build-dependencies]
embed-resource = "1.7"
