[package]
name = "dorothy"
version = "0.0.6"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = [
  "winuser", "wingdi", "winbase", "libloaderapi", "processthreadsapi",
  "errhandlingapi", "winerror", "commctrl", "sysinfoapi", "shobjidl", "combaseapi",
  "commdlg", "d2d1", "objbase", "dwrite", "winnls", "shellapi", "wincodec", "stringapiset"] }

chrono = "0.4"
csv = "1.1"
native-windows-gui = { version = "1.0", features = ["tabs"] }
native-windows-derive = "1.0"
rust-ini = "0.18"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
embed-resource = "1.7"
